Fix color contrast issues

--- a/examples/src/scss/_cayman.scss
+++ b/examples/src/scss/_cayman.scss
@@ -13,7 +13,7 @@ $header-bg-color-secondary: #2c3e50;
 $section-headings-color: #3498db;
 $body-text-color: #606c71;
 $body-link-color: #1e6bb8;
-$blockquote-text-color: #819198;
+$blockquote-text-color: #606c71;
 
 // Code
 $code-bg-color: #f3f6fa;
